// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputNumber > renders with .optional modifier correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" aria-label="Aria label" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with as correctly 1`] = `
"<section data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</section>"
`;

exports[`InputNumber > renders with class correctly 1`] = `
"<div data-slot="root" class="absolute" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with decrement slot correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class="">-</div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with decrementIcon correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with disabled correctly 1`] = `
"<div data-slot="root" role="group" data-disabled="">
  <div data-slot="decrement" class=""><button type="button" disabled="" aria-label="Decrement" tabindex="-1" data-disabled="" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" disabled="" data-disabled="" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" disabled="" aria-label="Increment" tabindex="-1" data-disabled="" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with increment slot correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class="">+</div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with incrementIcon correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with name correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with neutral variant ghost correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with neutral variant none correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with neutral variant outline correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with neutral variant soft correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with neutral variant subtle correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with orientation vertical correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:chevron-down" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:chevron-up" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with placeholder correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" placeholder="Number..." data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with pohon correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" class="rounded-full" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with primary variant ghost correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with primary variant none correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with primary variant outline correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with primary variant soft correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with primary variant subtle correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with required correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" required="" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with size lg correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with size md correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with size sm correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with size xl correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders with size xs correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders without decrement correctly 1`] = `
"<div data-slot="root" role="group">
  <!--v-if--><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:plus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders without decrement vertical correctly 1`] = `
"<div data-slot="root" role="group">
  <!--v-if--><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <div data-slot="increment" class=""><button type="button" aria-label="Increment" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:chevron-up" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders without increment and decrement correctly 1`] = `
"<div data-slot="root" role="group">
  <!--v-if--><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders without increment and decrement vertical correctly 1`] = `
"<div data-slot="root" role="group">
  <!--v-if--><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders without increment correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputNumber > renders without increment vertical correctly 1`] = `
"<div data-slot="root" role="group">
  <div data-slot="decrement" class=""><button type="button" aria-label="Decrement" tabindex="-1" data-slot="base" class=""><span class="iconify i-lucide:chevron-down" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div><input role="spinbutton" type="text" tabindex="0" inputmode="decimal" autocomplete="off" autocorrect="off" spellcheck="false" aria-roledescription="Number field" data-slot="base" value="">
  <!--v-if-->
  <!--v-if-->
</div>"
`;
